--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: dart_desafio
-description: A sample command-line application.
+description: Desafio do primeiro módulo de dart
 version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.17.5 <3.0.0'
+  sdk: ">=2.17.5 <3.0.0"
 
 # dependencies:
 #   path: ^1.8.0
